Fix weird social button formatting on Safari on standard template Fix weird social button formatting on all browsers on FW templates

--- a/dispatch/themes/ubyssey/static/css/sass/modules/_social.scss
+++ b/dispatch/themes/ubyssey/static/css/sass/modules/_social.scss
@@ -70,6 +70,11 @@ ul.social {
   }
 
   &.top {
+    width: 90px;
+    @media($bp-larger-than-phablet) {
+      width: 166px;
+    }
+    
     li {
       display: inline-block;
       margin-right: 15px;
